--- a/systemd/rait.service
+++ b/systemd/rait.service
@@ -5,9 +5,8 @@ After=network.target
 [Service]
 Type=oneshot
 RemainAfterExit=true
-ExecStart=rait up -c /root/local.conf
+ExecStart=rait up -p rait -c /root/local.conf -d /root/peers
 ExecStop=rait down -p rait
 
 [Install]
 WantedBy=multi-user.target
-
