--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,23 @@
-image: golang:latest
-
 stages:
-  - build
+  - binary
+  - container
 
-compile:
-  stage: build
+go-build:
+  image: golang:latest
+  stage: binary
   script:
     - go build -o bin/rait cmd/rait/rait.go
   artifacts:
     paths:
-      - bin/
+      - bin/rait
+
+docker-build:
+  image: docker:latest
+  stage: container
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
+    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+    - docker push "$CI_REGISTRY_IMAGE"
