Fix bug in up interface. Fix version display in github release.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,6 +12,8 @@ builds:
     goos:
       - linux
     main: ./cmd/rait/rait.go
+    ldflags:
+     - -s -w -X main.Version={{.Tag}}
 archives:
   - replacements:
       darwin: Darwin
